# gestion-du-transfusion-sangin

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.in  gestion-du-donne.glade  gestion-du-donne.gladep.bak
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  afficheparcap.txt  affichereg.txt  callbacks.c  callbacks.h  don.txt  etablissement.c  etablissement.h  etablissement.txt  gestion-du-donne  interface.c.bak  interface.h.bak  main.c  region.txt  rendez-vous.txt  utl.txt
src/.deps/: callbacks.Po  etablissement.Po
